# Sanik_Task_Interview

./: .coverage  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 00f6ae8dcd07_transact_bill_prod.py  04242579ea30_transact_bill_prod.py  92a52aaa056d_transact_bill_prod.py  9cd29a374633_users.py  d614c9ad71f0_empty_revision.py
app/: __init__.py
app/products/: models.py  schemes.py  (+1 more)
htmlcov/: d_3029296d80dcacbc___init___py.html  d_3029296d80dcacbc_auth_py.html  d_3029296d80dcacbc_models_py.html  d_3029296d80dcacbc_schemes_py.html  d_3029296d80dcacbc_views_py.html  d_5f5a17c013354698___init___py.html  d_7079307b4f1ab6ba___init___py.html  d_7079307b4f1ab6ba_accessor_py.html  d_7ae07730122c02fb___init___py.html  d_7ae07730122c02fb_accessor_py.html  d_a10a9f2151930084___init___py.html  d_aa617a6525a5b1c8___init___py.html  d_aa617a6525a5b1c8_models_py.html  d_aa617a6525a5b1c8_schemes_py.html  d_aa617a6525a5b1c8_utils_py.html  d_aa617a6525a5b1c8_views_py.html  d_be2f0e53f5ced003___init___py.html  d_be2f0e53f5ced003_accessor_py.html  d_ca9cd3c3101987b5___init___py.html  d_ca9cd3c3101987b5_config_py.html  d_ca9cd3c3101987b5_logging_py.html  d_ca9cd3c3101987b5_server_py.html  d_ca9cd3c3101987b5_utlis_py.html  d_caec7054cb67b095___init___py.html  d_caec7054cb67b095_base_accessor_py.html  d_caec7054cb67b095_database_py.html  d_caec7054cb67b095_gino_py.html  d_f66c32642152bbe8___init___py.html  d_f66c32642152bbe8_models_py.html  d_f66c32642152bbe8_schemes_py.html  d_f66c32642152bbe8_views_py.html  index.html  status.json
(+26 files in other folders)
